--- a/segunda-entrega.ipynb
+++ b/segunda-entrega.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "democratic-flooring",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "#'user/movies"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "selected-broadway",
    "metadata": {},
    "outputs": [
@@ -241,18 +241,18 @@
        "#'user/filtraDatos"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(defn filtraDatos [movies]\n",
+    "(defn filtraDatos [movies att]\n",
     "    (loop [m movies datos []]\n",
     "        (if (= 0 (count m))\n",
     "            datos\n",
     "            (do\n",
-    "                (recur (rest m) (conj datos (:imdb (first m))))\n",
+    "                (recur (rest m) (conj datos (att (first m))))\n",
     "            )\n",
     "            )\n",
     "        \n",
@@ -263,23 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "advanced-karma",
+   "execution_count": null,
+   "id": "canadian-playing",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#'user/datos"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(def datos (filtraDatos movies))"
+    "(def datos (filtraDatos movies :rottenomato))"
    ]
   },
   {
@@ -288,40 +277,6 @@
    "metadata": {},
    "source": [
     "#### Sort\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "sitting-narrow",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#'user/bubble-sort"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(defn single [datos n]\n",
-    "       (cond \n",
-    "           (empty? datos)[n]\n",
-    "           (< n (peek datos))\n",
-    "           (conj (pop datos) n (peek datos))\n",
-    "           :else (conj datos n)\n",
-    "           ))\n",
-    "(defn bubble-sort [datos]\n",
-    "    (loop [datos datos]\n",
-    "        (let [sorted-list (reduce single [] datos)]\n",
-    "            (if (= sorted-list datos)\n",
-    "                sorted-list\n",
-    "                (recur sorted-list)\n",
-    "                ))))"
    ]
   },
   {
@@ -334,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "id": "vital-symposium",
    "metadata": {},
    "outputs": [
@@ -344,14 +299,14 @@
        "#'user/mayor"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(defn mayor [datos]\n",
-    "    (first (first (bubble-sort[datos])))\n",
+    "    (first (sort datos))\n",
     ")"
    ]
   },
@@ -365,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "id": "electrical-concept",
    "metadata": {},
    "outputs": [
@@ -375,7 +330,7 @@
        "#'user/menor"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,17 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "id": "stuffed-finland",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.3"
+       "0.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "israeli-adelaide",
    "metadata": {},
    "outputs": [
@@ -419,7 +374,7 @@
        "0.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "sexual-geneva",
    "metadata": {},
    "outputs": [
@@ -448,7 +403,7 @@
        "#'user/media"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,17 +416,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "id": "romantic-necessity",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.701457238413835"
+       "0.2015527950310568"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "id": "hawaiian-value",
    "metadata": {},
    "outputs": [
@@ -500,7 +455,7 @@
        "#'user/desviacion_estandar"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
