Multiplicacion de matrices

--- a/ML_Movies.ipynb
+++ b/ML_Movies.ipynb
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dried-norman",
+   "id": "embedded-friend",
    "metadata": {},
    "outputs": [
     {
@@ -294,13 +294,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "supported-plaintiff",
+   "id": "exact-authorization",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#'user/matrixA"
+       "#'user/matrixB"
       ]
      },
      "execution_count": 12,
@@ -309,12 +309,12 @@
     }
    ],
    "source": [
-    "(def matrixA [x0 imdb runtime])"
+    "(def matrixB [x0 imdb runtime])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "turned-philosophy",
+   "id": "round-atlanta",
    "metadata": {},
    "source": [
     "Transpuesta"
@@ -322,8 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "structured-colors",
+   "execution_count": 13,
+   "id": "opposed-content",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "#'user/get-New-Col"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,8 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "compressed-output",
+   "execution_count": 14,
+   "id": "thousand-gentleman",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "#'user/transpuesta"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,23 +378,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "occupational-employee",
+   "execution_count": 15,
+   "id": "alert-tokyo",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1 8.9 91] [1 8.9 87] [1 8.9 130] [1 8.9 50] [1 8.9 89] [1 8.9 102] [1 8.9 75] [1 8.9 135] [1 9.0 90] [1 9.0 60] [1 9.0 152] [1 9.1 105] [1 9.1 56] [1 9.1 166] [1 9.3 132] [1 9.3 68] [1 9.3 60] [1 9.3 83] [1 9.3 90] [1 9.3 61]]"
+       "#'user/matrixA"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(vec @(transpuesta matrixA))"
+    "(def matrixA (vec @(transpuesta matrixB)))"
    ]
   },
   {
@@ -407,53 +407,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "occupied-transmission",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Syntax error compiling at (REPL:2:5).\r\n",
-      "Unable to resolve symbol: mB in this context\r\n"
-     ]
-    },
-    {
-     "ename": "class clojure.lang.Compiler$CompilerException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "  Util.java:   221 clojure.lang.Util/runtimeException",
-      "   core.clj:  3214 clojure.core$eval/invokeStatic",
-      "   core.clj:  3210 clojure.core$eval/invoke",
-      "   main.clj:   437 clojure.main$repl$read_eval_print__9086$fn__9089/invoke",
-      "   main.clj:   458 clojure.main$repl$fn__9095/invoke",
-      "   main.clj:   368 clojure.main$repl/doInvoke",
-      "RestFn.java:  1523 clojure.lang.RestFn/invoke",
-      "   AFn.java:    22 clojure.lang.AFn/run",
-      "   AFn.java:    22 clojure.lang.AFn/run",
-      "Thread.java:   745 java.lang.Thread/run"
-     ]
+     "data": {
+      "text/plain": [
+       "[[1 8.9 91] [1 8.9 87] [1 8.9 130] [1 8.9 50] [1 8.9 89] [1 8.9 102] [1 8.9 75] [1 8.9 135] [1 9.0 90] [1 9.0 60] [1 9.0 152] [1 9.1 105] [1 9.1 56] [1 9.1 166] [1 9.3 132] [1 9.3 68] [1 9.3 60] [1 9.3 83] [1 9.3 90] [1 9.3 61]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "(defn multiplicador [matrizA matrizB]\n",
-    "    (loop [mA mB mTemp () mResultado () contadorA 0 contadorB 0]\n",
-    "        (if (= (count mA) 0)\n",
-    "            \n",
+    "matrixA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "formed-adobe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] [9.3 9.3 9.3 9.3 9.3 9.3 9.1 9.1 9.1 9.0 9.0 9.0 8.9 8.9 8.9 8.9 8.9 8.9 8.9 8.9] [61 90 83 60 68 132 166 56 105 152 60 90 135 75 102 89 50 130 87 91]]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " matrixB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "olympic-bulgarian",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#'user/get-Mult-Val"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defn get-Mult-Val [matrixA matrixB]\n",
+    "   \n",
+    "    (def newVal \n",
+    "        (+ \n",
+    "         (* (get matrixA 0)(get matrixB 0))\n",
+    "         (* (get matrixA 1)(get matrixB 1))\n",
+    "         (* (get matrixA 2)(get matrixB 2))\n",
+    "         ))\n",
+    "  \n",
+    "    newVal\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "improving-stopping",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#'user/multiplicacion"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defn multiplicacion [matrixA matrixB]\n",
+    "    (loop [mResult (atom '())  n 0]\n",
+    "         (if (= n (count matrixA))\n",
+    "             mResult\n",
+    "             (do\n",
+    "                 (def vectorTemp [(get-Mult-Val (get matrixB 0) (get matrixA n)) (get-Mult-Val (get matrixB 1) (get matrixA n)) (get-Mult-Val (get matrixB 2) (get matrixA n))])\n",
+    "                 (println vectorTemp)\n",
+    "                 (swap! mResult conj vectorTemp)\n",
+    "                 (recur mResult (inc n))\n",
+    "                 \n",
+    "             )\n",
     "        )\n",
     "    )\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    )"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fleet-mortgage",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100.9 938.3700000000001 8415.0]\n",
+      "[96.9 901.1700000000001 8083.0]\n",
+      "[139.9 1301.07 11652.0]\n",
+      "[59.9 557.07 5012.0]\n",
+      "[98.9 919.7700000000001 8249.0]\n",
+      "[111.9 1040.67 9328.0]\n",
+      "[84.9 789.57 7087.0]\n",
+      "[144.9 1347.57 12067.0]\n",
+      "[100.0 930.0000000000001 8341.0]\n",
+      "[70.0 651.0 5851.0]\n",
+      "[162.0 1506.6000000000001 13487.0]\n",
+      "[115.1 1070.43 9595.0]\n",
+      "[66.1 614.73 5528.0]\n",
+      "[176.1 1637.7300000000002 14658.0]\n",
+      "[142.3 1323.39 11854.0]\n",
+      "[78.3 728.19 6542.0]\n",
+      "[70.3 653.79 5878.0]\n",
+      "[93.3 867.69 7787.0]\n",
+      "[100.3 932.7900000000001 8368.0]\n",
+      "[71.3 663.09 5961.0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([100.9 938.3700000000001 8415.0] [96.9 901.1700000000001 8083.0] [139.9 1301.07 11652.0] [59.9 557.07 5012.0] [98.9 919.7700000000001 8249.0] [111.9 1040.67 9328.0] [84.9 789.57 7087.0] [144.9 1347.57 12067.0] [100.0 930.0000000000001 8341.0] [70.0 651.0 5851.0] [162.0 1506.6000000000001 13487.0] [115.1 1070.43 9595.0] [66.1 614.73 5528.0] [176.1 1637.7300000000002 14658.0] [142.3 1323.39 11854.0] [78.3 728.19 6542.0] [70.3 653.79 5878.0] [93.3 867.69 7787.0] [100.3 932.7900000000001 8368.0] [71.3 663.09 5961.0])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(reverse @(multiplicacion matrixA matrixB))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "olympic-bulgarian",
+   "id": "orange-jacob",
    "metadata": {},
    "outputs": [],
    "source": []
