--- a/ML_Movies.ipynb
+++ b/ML_Movies.ipynb
@@ -293,23 +293,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "exact-authorization",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#'user/matrixB"
+       "#'user/matrixA"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(def matrixB [x0 imdb runtime])"
+    "(def matrixA [x0 imdb runtime])"
    ]
   },
   {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "opposed-content",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "#'user/get-New-Col"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "thousand-gentleman",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "#'user/transpuesta"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,23 +378,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "alert-tokyo",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#'user/matrixA"
+       "#'user/matrixB"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(def matrixA (vec @(transpuesta matrixB)))"
+    "(def matrixB (vec @(transpuesta matrixA)))"
    ]
   },
   {
@@ -407,17 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "occupied-transmission",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1 8.9 91] [1 8.9 87] [1 8.9 130] [1 8.9 50] [1 8.9 89] [1 8.9 102] [1 8.9 75] [1 8.9 135] [1 9.0 90] [1 9.0 60] [1 9.0 152] [1 9.1 105] [1 9.1 56] [1 9.1 166] [1 9.3 132] [1 9.3 68] [1 9.3 60] [1 9.3 83] [1 9.3 90] [1 9.3 61]]"
+       "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] [9.3 9.3 9.3 9.3 9.3 9.3 9.1 9.1 9.1 9.0 9.0 9.0 8.9 8.9 8.9 8.9 8.9 8.9 8.9 8.9] [61 90 83 60 68 132 166 56 105 152 60 90 135 75 102 89 50 130 87 91]]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,17 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "formed-adobe",
+   "execution_count": 26,
+   "id": "grave-impact",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] [9.3 9.3 9.3 9.3 9.3 9.3 9.1 9.1 9.1 9.0 9.0 9.0 8.9 8.9 8.9 8.9 8.9 8.9 8.9 8.9] [61 90 83 60 68 132 166 56 105 152 60 90 135 75 102 89 50 130 87 91]]"
+       "[[1 8.9 91] [1 8.9 87] [1 8.9 130] [1 8.9 50] [1 8.9 89] [1 8.9 102] [1 8.9 75] [1 8.9 135] [1 9.0 90] [1 9.0 60] [1 9.0 152] [1 9.1 105] [1 9.1 56] [1 9.1 166] [1 9.3 132] [1 9.3 68] [1 9.3 60] [1 9.3 83] [1 9.3 90] [1 9.3 61]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "olympic-bulgarian",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "#'user/get-Mult-Val"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "improving-stopping",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "#'user/multiplicacion"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "fleet-mortgage",
    "metadata": {},
    "outputs": [
@@ -522,35 +522,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[100.9 938.3700000000001 8415.0]\n",
-      "[96.9 901.1700000000001 8083.0]\n",
-      "[139.9 1301.07 11652.0]\n",
-      "[59.9 557.07 5012.0]\n",
-      "[98.9 919.7700000000001 8249.0]\n",
-      "[111.9 1040.67 9328.0]\n",
-      "[84.9 789.57 7087.0]\n",
-      "[144.9 1347.57 12067.0]\n",
-      "[100.0 930.0000000000001 8341.0]\n",
-      "[70.0 651.0 5851.0]\n",
-      "[162.0 1506.6000000000001 13487.0]\n",
-      "[115.1 1070.43 9595.0]\n",
-      "[66.1 614.73 5528.0]\n",
-      "[176.1 1637.7300000000002 14658.0]\n",
-      "[142.3 1323.39 11854.0]\n",
-      "[78.3 728.19 6542.0]\n",
-      "[70.3 653.79 5878.0]\n",
-      "[93.3 867.69 7787.0]\n",
-      "[100.3 932.7900000000001 8368.0]\n",
-      "[71.3 663.09 5961.0]\n"
+      "[100.9 96.9 139.9]\n",
+      "[938.3700000000001 901.1700000000001 1301.07]\n",
+      "[8415.0 8083.0 11652.0]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "([100.9 938.3700000000001 8415.0] [96.9 901.1700000000001 8083.0] [139.9 1301.07 11652.0] [59.9 557.07 5012.0] [98.9 919.7700000000001 8249.0] [111.9 1040.67 9328.0] [84.9 789.57 7087.0] [144.9 1347.57 12067.0] [100.0 930.0000000000001 8341.0] [70.0 651.0 5851.0] [162.0 1506.6000000000001 13487.0] [115.1 1070.43 9595.0] [66.1 614.73 5528.0] [176.1 1637.7300000000002 14658.0] [142.3 1323.39 11854.0] [78.3 728.19 6542.0] [70.3 653.79 5878.0] [93.3 867.69 7787.0] [100.3 932.7900000000001 8368.0] [71.3 663.09 5961.0])"
+       "([100.9 96.9 139.9] [938.3700000000001 901.1700000000001 1301.07] [8415.0 8083.0 11652.0])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,14 +541,6 @@
    "source": [
     "(reverse @(multiplicacion matrixA matrixB))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "orange-jacob",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
