Falta la inversa

--- a/segunda-entrega.ipynb
+++ b/segunda-entrega.ipynb
@@ -5,7 +5,7 @@
    "id": "trying-maple",
    "metadata": {},
    "source": [
-    "# Segunda Entrega del Proyecto Final"
+    "# Proyecto Final"
    ]
   },
   {
