--- a/ML_Movies.ipynb
+++ b/ML_Movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "saved-welsh",
+   "id": "unexpected-recognition",
    "metadata": {},
    "source": [
     "# Proyecto Final\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incident-tutorial",
+   "id": "political-investment",
    "metadata": {},
    "source": [
     "- Alfredo Osuna\n",
@@ -27,56 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "id": "primary-pharmaceutical",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Execution error (FileNotFoundException) at user/eval4313 (REPL:2).\r\n",
-      "Could not locate clojure/core/matrix__init.class, clojure/core/matrix.clj or clojure/core/matrix.cljc on classpath.\r\n"
-     ]
-    },
-    {
-     "ename": "class java.io.FileNotFoundException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "    RT.java:   462 clojure.lang.RT/load",
-      "   core.clj:  6126 clojure.core$load$fn__6839/invoke",
-      "   core.clj:  6125 clojure.core$load/invokeStatic",
-      "   core.clj:  6109 clojure.core$load/doInvoke",
-      "RestFn.java:   408 clojure.lang.RestFn/invoke",
-      "   core.clj:  5908 clojure.core$load_one/invokeStatic",
-      "   core.clj:  5903 clojure.core$load_one/invoke",
-      "   core.clj:  5948 clojure.core$load_lib$fn__6780/invoke",
-      "   core.clj:  5947 clojure.core$load_lib/invokeStatic",
-      "   core.clj:  5928 clojure.core$load_lib/doInvoke",
-      "RestFn.java:   142 clojure.lang.RestFn/applyTo",
-      "   core.clj:   667 clojure.core$apply/invokeStatic",
-      "   core.clj:  5985 clojure.core$load_libs/invokeStatic",
-      "   core.clj:  5969 clojure.core$load_libs/doInvoke",
-      "RestFn.java:   137 clojure.lang.RestFn/applyTo",
-      "   core.clj:   669 clojure.core$apply/invokeStatic",
-      "   core.clj:  6093 clojure.core$use/invokeStatic",
-      "RestFn.java:   408 clojure.lang.RestFn/invoke",
-      "   core.clj:  3214 clojure.core$eval/invokeStatic",
-      "   core.clj:  3210 clojure.core$eval/invoke",
-      "   main.clj:   437 clojure.main$repl$read_eval_print__9086$fn__9089/invoke",
-      "   main.clj:   458 clojure.main$repl$fn__9095/invoke",
-      "   main.clj:   368 clojure.main$repl/doInvoke",
-      "RestFn.java:  1523 clojure.lang.RestFn/invoke",
-      "   AFn.java:    22 clojure.lang.AFn/run",
-      "   AFn.java:    22 clojure.lang.AFn/run",
-      "Thread.java:   745 java.lang.Thread/run"
-     ]
+     "data": {
+      "text/plain": [
+       "#'user/toDouble"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "(require '[clojure.string :as s])\n",
-    "(use 'clojure.core.matrix)\n",
     "(defn toInt[x] (Integer/parseInt x));Java\n",
     "(defn toDouble[x] (Double/parseDouble x));Java"
    ]
@@ -91,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "european-shore",
    "metadata": {},
    "outputs": [
@@ -101,7 +68,7 @@
        "user.Movie"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "wanted-family",
    "metadata": {},
    "outputs": [
@@ -135,7 +102,7 @@
        "#'user/data"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "offshore-huntington",
    "metadata": {},
    "outputs": [
@@ -164,7 +131,7 @@
        "#'user/toMovie"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "rotary-detective",
    "metadata": {},
    "outputs": [
@@ -192,7 +159,7 @@
        "#'user/get-Movies-lazy"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "australian-understanding",
    "metadata": {},
    "outputs": [
@@ -215,7 +182,7 @@
        "#'user/get-Vector-Valor"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "steady-garlic",
    "metadata": {},
    "outputs": [
@@ -238,7 +205,7 @@
        "#'user/movies"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "nutritional-advertising",
    "metadata": {},
    "outputs": [
@@ -259,7 +226,7 @@
        "#'user/imdb"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 9,
    "id": "federal-benchmark",
    "metadata": {},
    "outputs": [
@@ -280,7 +247,7 @@
        "#'user/rottenTomato"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "embedded-friend",
    "metadata": {},
    "outputs": [
@@ -324,7 +291,7 @@
        "#'user/x0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 12,
    "id": "exact-authorization",
    "metadata": {},
    "outputs": [
@@ -345,7 +312,7 @@
        "#'user/matrix_transpuesta"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,17 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "according-lucas",
+   "execution_count": 13,
+   "id": "sacred-parker",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] [5.9 5.0 8.2 5.3 7.0 6.5 5.9 6.6 5.1 5.5 6.4 6.6 7.7 7.8 5.0 5.6 5.6 5.4 7.4 8.0] [61 90 83 60 68 132 166 56 105 152 60 90 135 75 102 89 50 130 87 91]]"
+       "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] [5.9 5.0 8.2 5.3 7.0 6.5 5.9 6.6 5.1 5.5 6.4 6.6 7.7 7.8 5.0 5.6 5.6 5.4 7.4 8.0] [7 11 13 15 15 17 21 21 22 22 22 22 22 23 24 24 24 25 26 26]]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 14,
    "id": "opposed-content",
    "metadata": {},
    "outputs": [
@@ -395,7 +362,7 @@
        "#'user/get-New-Col"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 15,
    "id": "thousand-gentleman",
    "metadata": {},
    "outputs": [
@@ -419,7 +386,7 @@
        "#'user/transpuesta"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 16,
    "id": "alert-tokyo",
    "metadata": {},
    "outputs": [
@@ -451,13 +418,13 @@
        "#'user/matrixA"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(def matrixA (vec @(transpuesta matrixA)))"
+    "(def matrixA (vec @(transpuesta matrix_transpuesta)))"
    ]
   },
   {
@@ -470,17 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 17,
    "id": "occupied-transmission",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] [5.9 5.0 8.2 5.3 7.0 6.5 5.9 6.6 5.1 5.5 6.4 6.6 7.7 7.8 5.0 5.6 5.6 5.4 7.4 8.0] [61 90 83 60 68 132 166 56 105 152 60 90 135 75 102 89 50 130 87 91]]"
+       "[[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] [5.9 5.0 8.2 5.3 7.0 6.5 5.9 6.6 5.1 5.5 6.4 6.6 7.7 7.8 5.0 5.6 5.6 5.4 7.4 8.0] [7 11 13 15 15 17 21 21 22 22 22 22 22 23 24 24 24 25 26 26]]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 18,
    "id": "grave-impact",
    "metadata": {
     "scrolled": true
@@ -500,10 +467,10 @@
     {
      "data": {
       "text/plain": [
-       "[[1 8.0 91] [1 7.4 87] [1 5.4 130] [1 5.6 50] [1 5.6 89] [1 5.0 102] [1 7.8 75] [1 7.7 135] [1 6.6 90] [1 6.4 60] [1 5.5 152] [1 5.1 105] [1 6.6 56] [1 5.9 166] [1 6.5 132] [1 7.0 68] [1 5.3 60] [1 8.2 83] [1 5.0 90] [1 5.9 61]]"
+       "[[1 8.0 26] [1 7.4 26] [1 5.4 25] [1 5.6 24] [1 5.6 24] [1 5.0 24] [1 7.8 23] [1 7.7 22] [1 6.6 22] [1 6.4 22] [1 5.5 22] [1 5.1 22] [1 6.6 21] [1 5.9 21] [1 6.5 17] [1 7.0 15] [1 5.3 15] [1 8.2 13] [1 5.0 11] [1 5.9 7]]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,8 +481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
-   "id": "usual-inspiration",
+   "execution_count": 19,
+   "id": "cheap-snapshot",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +491,7 @@
        "#'user/get-Mult-Val-Xt-X"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 20,
    "id": "improving-stopping",
    "metadata": {},
    "outputs": [
@@ -554,7 +521,7 @@
        "#'user/multiplicacion_x_xt"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 21,
    "id": "fleet-mortgage",
    "metadata": {},
    "outputs": [
@@ -587,7 +554,7 @@
        "#'user/matrix_multiplicacion_xt_x"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,17 +565,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "id": "preliminary-sword",
+   "execution_count": 22,
+   "id": "dynamic-brass",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[20 126.5 1882] [126.5 791.12 12082.199999999999] [1882 12082.199999999999 170534]]"
+       "[[20 126.5 402] [126.5 791.12 2525.8] [402 2525.8 7668]]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,15 +594,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "driven-auckland",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#'user/inversa"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defn inversa [matrixA]\n",
+    "    ()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "interim-barrel",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#'user/matrix_inversa"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(def matrix_inversa  [[2.491915416 -0.28318713 -0.032375961] [-0.28318713 0.047591778 -0.000887108] [-0.032375961 -0.000887108 0.001889896]])"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "rubber-administrator",
+   "id": "mediterranean-notebook",
    "metadata": {},
    "source": [
     "## Multiplicacion Xt Y"
@@ -643,8 +646,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
-   "id": "rapid-array",
+   "execution_count": 25,
+   "id": "chinese-membership",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +656,7 @@
        "#'user/get-Mult-Val-Xt-Y"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,8 +676,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
-   "id": "mounted-employee",
+   "execution_count": 26,
+   "id": "imperial-neutral",
    "metadata": {},
    "outputs": [
     {
@@ -683,71 +686,147 @@
        "#'user/matrix_multiplicacion_xt_y"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(defn matrix_multiplicacion_xt_y [matrixA matrixTranspuesta]\n",
-    "    (println matrixA)\n",
     "    (def vectorTemp [(get-Mult-Val-Xt-Y (get matrixTranspuesta 0) matrixA)(get-Mult-Val-Xt-Y (get matrixTranspuesta 1) matrixA)(get-Mult-Val-Xt-Y (get matrixTranspuesta 2) matrixA)])                               \n",
-    "    (println vectorTemp)\n",
+    "    vectorTemp\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "id": "black-amendment",
+   "execution_count": 27,
+   "id": "japanese-gateway",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.77 0.14 1.0 1.0 0.97 0.92 0.88 0.73 0.91 0.57 0.36 0.17 0.8 0.82 0.5 0.11 0.49 0.73 0.83 1.0]\n",
-      "[13.700000000000001 89.225 1308.92]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Execution error (NullPointerException) at nrepl.middleware.interruptible-eval/evaluate (interruptible_eval.clj:79).\r\n",
-      "null\r\n"
-     ]
-    },
-    {
-     "ename": "class clojure.lang.Compiler$CompilerException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "   core.clj:  2300 clojure.core$deref_future/invokeStatic",
-      "   core.clj:  2320 clojure.core$deref/invokeStatic",
-      "   core.clj:  2306 clojure.core$deref/invoke",
-      "   AFn.java:   154 clojure.lang.AFn/applyToHelper",
-      "   AFn.java:   144 clojure.lang.AFn/applyTo",
-      "   core.clj:  3214 clojure.core$eval/invokeStatic",
-      "   core.clj:  3210 clojure.core$eval/invoke",
-      "   main.clj:   437 clojure.main$repl$read_eval_print__9086$fn__9089/invoke",
-      "   main.clj:   458 clojure.main$repl$fn__9095/invoke",
-      "   main.clj:   368 clojure.main$repl/doInvoke",
-      "RestFn.java:  1523 clojure.lang.RestFn/invoke",
-      "   AFn.java:    22 clojure.lang.AFn/run",
-      "   AFn.java:    22 clojure.lang.AFn/run",
-      "Thread.java:   745 java.lang.Thread/run"
-     ]
+     "data": {
+      "text/plain": [
+       "#'user/matrix_multiplicacion_xt_y"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "(def matrix_multiplicacion_xt_y (vec (reverse @(matrix_multiplicacion_xt_y rottenTomato matrix_transpuesta))))"
+    "(def matrix_multiplicacion_xt_y (matrix_multiplicacion_xt_y rottenTomato matrix_transpuesta))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "built-holocaust",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[13.700000000000001 89.225 271.84]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " matrix_multiplicacion_xt_y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "devoted-springfield",
+   "metadata": {},
+   "source": [
+    "## Multiplicacion (Xt X)^-1 (Xt Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "transsexual-assistant",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#'user/get-Mult-Val-Result"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defn get-Mult-Val-Result [matrixA matrixB]\n",
+    "     (loop [newValue 0 n 0]\n",
+    "       (if (= n (count matrixA))\n",
+    "            newValue\n",
+    "            (do\n",
+    "                (recur (+ (* (get matrixA n)(get matrixB n)) newValue) (inc n))    \n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "declared-norfolk",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#'user/matrix_multiplicacion_result"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defn matrix_multiplicacion_result [matrixA matrixB]\n",
+    "    (def vectorTemp [(get-Mult-Val-Xt-Y (get matrixB 0) matrixA)(get-Mult-Val-Xt-Y (get matrixB 1) matrixA)(get-Mult-Val-Xt-Y (get matrixB 2) matrixA)])                               \n",
+    "    vectorTemp\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "alike-agency",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.07078828671000004 0.12556127232999995 -0.008953548360000063]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(matrix_multiplicacion_result matrix_multiplicacion_xt_y matrix_inversa)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "egyptian-cassette",
+   "id": "signed-massachusetts",
    "metadata": {},
    "outputs": [],
    "source": []
