--- a/ML_Movies.ipynb
+++ b/ML_Movies.ipynb
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "polyphonic-spanish",
+   "id": "entitled-orlando",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "abandoned-steel",
+   "id": "essential-width",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "violent-camcorder",
+   "id": "turned-january",
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "based-primary",
+   "id": "canadian-school",
    "metadata": {
     "scrolled": true
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comic-medium",
+   "id": "alike-morris",
    "metadata": {},
    "source": [
     "## Grafica"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "champion-haven",
+   "id": "changing-nowhere",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "corporate-tolerance",
+   "id": "italian-mining",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "tested-president",
+   "id": "hawaiian-charity",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "noticed-testimony",
+   "id": "practical-surfing",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "affecting-landscape",
+   "id": "atmospheric-tulsa",
    "metadata": {},
    "outputs": [
     {
@@ -728,8 +728,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "sorted-investment",
+   "execution_count": 47,
+   "id": "important-impression",
    "metadata": {},
    "outputs": [
     {
@@ -738,28 +738,28 @@
        "#'user/y_pred"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(def y_pred (map + (take (count imdb_g) (repeat a)) (map #(* % b) imdb_g) (map #(* % c) rottenTomatto_g) ) )"
+    "(def y_pred (map + (take (count imdb_g) (repeat a)) (map #(* % b) imdb_g) (map #(* % c) rottenTomato_g) ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "fitting-notification",
+   "execution_count": 49,
+   "id": "interested-financing",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,16 +770,8 @@
     "                       :z y_pred\n",
     "                       :mode \"markers\"\n",
     "                       :type \"scatter3d\"}])\n",
-    "(j/graph! \"Price data\" scatter-graph3d)"
+    "(j/graph! \"RottenTomato\" scatter-graph3d)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "neither-viewer",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
